# rag-first

./: .env  .gitignore  README.md  pyproject.toml
src/rag_first/config/: llm_config.py  settings.py
src/rag_first/data/loaders/: csv_loader.py  hf_loader.py  text_loader.py
src/rag_first/data/processors/: chunker.py
src/rag_first/embeddings/: embedding_manager.py
src/rag_first/llm/: __init__.py  cloud_llm.py  local_llm.py
src/rag_first/pipeline/: rag_pipeline.py
src/rag_first/vectorstore/: chroma_manager.py
st_runners/: rag_pipeline_app.py  stream_list_text_loader.py
