[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-first"
version = "0.1.0"
description = "Simplified RAG Pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain>=0.3.0,<1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.4.22",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "datasets>=2.14.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.51.0",
    "pypdf>=6.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[project.scripts]
rag = "rag_first.main:main"  # CLI entry point

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
